[gd_scene load_steps=43 format=2]

[ext_resource path="res://char/BOSS_glow.png" type="Texture" id=1]
[ext_resource path="res://char/circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://platform/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://extra/star.png" type="Texture" id=4]
[ext_resource path="res://platform/New Piskel.png" type="Texture" id=5]
[ext_resource path="res://extra/blink.gd" type="Script" id=6]
[ext_resource path="res://platform/laser_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://platform/platform.png" type="Texture" id=8]
[ext_resource path="res://extra/light.png" type="Texture" id=9]
[ext_resource path="res://extra/grass.png" type="Texture" id=10]
[ext_resource path="res://background/building.png" type="Texture" id=11]
[ext_resource path="res://char/square.png" type="Texture" id=12]
[ext_resource path="res://background/sky.png" type="Texture" id=13]
[ext_resource path="res://char/square.gd" type="Script" id=14]
[ext_resource path="res://char/square.tscn" type="PackedScene" id=15]
[ext_resource path="res://char/triangle.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/boss.gd" type="Script" id=17]
[ext_resource path="res://platform/boss_button.gd" type="Script" id=18]
[ext_resource path="res://char/square_light.png" type="Texture" id=19]
[ext_resource path="res://Scenes/transition.gd" type="Script" id=20]
[ext_resource path="res://Scenes/BossBlood.gd" type="Script" id=21]
[ext_resource path="res://extra/gate close.mp3" type="AudioStream" id=22]
[ext_resource path="res://extra/gate open.mp3" type="AudioStream" id=23]
[ext_resource path="res://extra/dead.mp3" type="AudioStream" id=24]
[ext_resource path="res://extra/roaring.mp3" type="AudioStream" id=25]
[ext_resource path="res://Scenes/MobileControl.tscn" type="PackedScene" id=26]

[sub_resource type="TileSet" id=1]
0/name = "building.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "sky.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "pressed",
"speed": 15.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "unpressed",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=6]
0/name = "platform.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=8]
0/name = "platform.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=9]
radius = 75.798

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=11]
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.8, 4.2, 5.2, 6, 6.4, 7.4, 8.5, 8.8, 10, 10.4, 11.8, 12.1, 13, 13.3, 14.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 637.968, 453.997 ), Vector2( 637.968, 453.997 ), Vector2( 1172.26, 485.829 ), Vector2( 1172.26, 485.829 ), Vector2( -111.837, 503.789 ), Vector2( 70.391, 482.6 ), Vector2( 70.391, 482.6 ), Vector2( 1350.22, -148.84 ), Vector2( 1155.28, -8.991 ), Vector2( 1155.28, -8.991 ), Vector2( 70.391, 482.6 ), Vector2( 70.391, 482.6 ), Vector2( 1172.26, 485.829 ), Vector2( 1172.26, 485.829 ), Vector2( 1126.01, 44.726 ), Vector2( 1126.01, 44.726 ), Vector2( 70.391, 482.6 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/upperRect:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 300.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/bottomRect:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 600, 295.04 ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/upperRect:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 300.0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/bottomRect:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 295.04, 600 ]
}

[node name="Boss" type="Node2D"]
position = Vector2( 127.014, 0 )

[node name="background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 1, 0, 393224, 1, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 1, 0, 458760, 1, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 1, 0, 524296, 1, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0 )

[node name="light" type="TextureRect" parent="."]
margin_left = -52.9084
margin_top = 525.512
margin_right = 1075.09
margin_bottom = 605.512
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grasses" type="Node2D" parent="."]
position = Vector2( -7.55103, 20.7652 )

[node name="grass" type="Sprite" parent="Grasses"]
position = Vector2( 222.315, 485.055 )
texture = ExtResource( 10 )

[node name="grass2" type="Sprite" parent="Grasses"]
position = Vector2( 724.82, 475.829 )
scale = Vector2( 1.12, 1 )
texture = ExtResource( 10 )
flip_h = true

[node name="Obs" type="Node2D" parent="."]
position = Vector2( 337.907, 132.142 )

[node name="door" parent="Obs" instance=ExtResource( 3 )]
position = Vector2( 190.134, 375.749 )
scale = Vector2( 0.44, 0.44 )

[node name="boss_button" parent="Obs" instance=ExtResource( 7 )]
modulate = Color( 0, 1, 0.278431, 1 )
position = Vector2( 190.174, 241.86 )
frames = SubResource( 4 )
animation = "unpressed"
script = ExtResource( 18 )

[node name="Timer" type="Timer" parent="Obs/boss_button"]
wait_time = 3.0
one_shot = true

[node name="miniPlatforms" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 196640, 0, 0, 262176, 0, 0, 327712, 0, 0, 393248, 0, 0, 458763, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458772, 0, 0, 458784, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 851972, 0, 0, 851973, 0, 0, 851994, 0, 0, 851995, 0, 0, 917518, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0 )

[node name="platforms" type="TileMap" parent="."]
tile_set = SubResource( 8 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 0, 0, -65520, 0, 0, -65519, 0, 0, 65534, 0, 0, 65535, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 131070, 0, 0, 131071, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 196606, 0, 0, 196607, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 262142, 0, 0, 262143, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 327678, 0, 0, 327679, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 393214, 0, 0, 393215, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 458750, 0, 0, 458751, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 524286, 0, 0, 524287, 0, 0, 458758, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 589822, 0, 0, 589823, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0 )

[node name="Chars" type="Node" parent="."]

[node name="circle" parent="Chars" groups=[
"char",
] instance=ExtResource( 2 )]
position = Vector2( 640.42, 44.468 )
scale = Vector2( 0.0381659, 0.0381659 )

[node name="square" parent="Chars" groups=[
"can_press",
] instance=ExtResource( 15 )]
position = Vector2( 146.755, 47.6759 )
scale = Vector2( 0.0597778, -0.0602632 )
script = ExtResource( 14 )

[node name="triangle" parent="Chars" instance=ExtResource( 16 )]
position = Vector2( 1134.38, 52.0582 )
scale = Vector2( 0.079998, -0.077353 )

[node name="boss" type="Sprite" parent="Chars"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 639.555, 455.584 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 17 )

[node name="Area2D" type="Area2D" parent="Chars/boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chars/boss/Area2D"]
shape = SubResource( 9 )

[node name="fake_star" type="Sprite" parent="Chars/boss"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="rotate" type="AnimationPlayer" parent="Chars/boss"]
autoplay = "rotate"
anims/rotate = SubResource( 10 )

[node name="movement" type="AnimationPlayer" parent="Chars/boss"]
autoplay = "move_1"
anims/move_1 = SubResource( 11 )

[node name="blink" type="AnimationPlayer" parent="Chars/boss"]
anims/blink = SubResource( 12 )

[node name="roar" type="AudioStreamPlayer" parent="Chars/boss"]
stream = ExtResource( 25 )
volume_db = 10.0

[node name="BossBlood" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -117.0
margin_right = 1150.0
margin_bottom = 18.0
texture = ExtResource( 19 )
expand = true
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blink" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -159.0
margin_top = -69.0
margin_right = 1185.0
margin_bottom = 700.0
texture = ExtResource( 12 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="blink"]
anims/blink = SubResource( 13 )
anims/longer_blink = SubResource( 14 )

[node name="dead" type="AudioStreamPlayer" parent="blink"]
stream = ExtResource( 24 )

[node name="transition" type="Control" parent="."]
margin_left = -93.338
margin_top = -8.48528
margin_right = -53.338
margin_bottom = 31.5147
rect_scale = Vector2( 1.16, 1.16 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}
scene = "res://Scenes/Thanks.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition"]
anims/close = SubResource( 15 )
anims/open = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="transition"]
z_index = 1

[node name="upperRect" type="TextureRect" parent="transition/Sprite"]
margin_left = -66.0
margin_right = 1091.0
margin_bottom = 300.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottomRect" type="TextureRect" parent="transition/Sprite"]
margin_left = -62.6478
margin_top = 295.04
margin_right = 1094.35
margin_bottom = 600.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open" type="AudioStreamPlayer2D" parent="transition"]
stream = ExtResource( 23 )
volume_db = 24.0

[node name="close" type="AudioStreamPlayer" parent="transition"]
stream = ExtResource( 22 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 876.076
margin_top = 569.596
margin_right = 1000.08
margin_bottom = 583.596
text = "Press 'R\" To Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 398.956
margin_top = 146.283
margin_right = 522.96
margin_bottom = 160.283
rect_scale = Vector2( 1.8, 1.8 )
text = "Hard Boss!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobileControl" parent="." instance=ExtResource( 26 )]
position = Vector2( 0, 150 )
scale = Vector2( 0.776893, 0.776893 )

[connection signal="finish" from="Obs/door" to="transition" method="_on_door_finish"]
[connection signal="hit_boss" from="Obs/boss_button" to="BossBlood" method="_on_boss_button_hit_boss"]
[connection signal="hit_boss" from="Obs/boss_button" to="Chars/boss" method="_on_boss_button_hit_boss"]
[connection signal="timeout" from="Obs/boss_button/Timer" to="Obs/boss_button" method="_on_Timer_timeout"]
[connection signal="die" from="Chars/circle" to="blink" method="_on_circle_die"]
[connection signal="die" from="Chars/circle" to="Chars/square" method="_on_circle_die"]
[connection signal="die" from="Chars/square" to="Chars/triangle" method="_on_square_die"]
[connection signal="die" from="Chars/square" to="blink" method="_on_square_die"]
[connection signal="die" from="Chars/triangle" to="blink" method="_on_triangle_die"]
[connection signal="end" from="Chars/boss" to="blink" method="_on_boss_end"]
[connection signal="end" from="Chars/boss" to="Obs/door" method="_on_boss_end"]
[connection signal="body_entered" from="Chars/boss/Area2D" to="Chars/boss" method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="transition/AnimationPlayer" to="transition" method="_on_AnimationPlayer_animation_finished"]
